# chess

./: .gitignore  Cargo.toml  profile.json
chess_macro/: Cargo.toml
chess_macro/src/: lib.rs
engine/: Cargo.toml
engine/src/: lib.rs  random.rs
lookup_gen/: main.rs
movegen/: Cargo.toml
movegen/lookup_gen/: main.rs
movegen/src/: board.rs  display.rs  lib.rs  main.rs  mv.rs  piece_bb.rs  state.rs
movegen/src/movegen/: knight.rs  pawn.rs  slider.rs
movegen/src/parse/: board.rs  mv.rs
src/: board.rs  both_colors.rs  cli.rs  lib.rs  main.rs  mv.rs  piece_bb.rs
src/movegen/: king.rs  mod.rs  util.rs
src/parse/: board.rs  mod.rs  mv.rs
util/: Cargo.toml  profile.json
util/src/: bitboard.rs  color.rs  error.rs  file.rs  helper.rs  lib.rs  lookup.rs  magic.rs  main.rs  piece.rs  precomputed.rs  rank.rs  square.rs
view/: Cargo.toml  index.html
view/src/: board.rs  main.rs
