[package]
name = "view"
version = "0.1.0"
edition = "2021"


[dependencies]
axum = "0.7.3"
engine = { version = "0.1.0", path = "../engine" }
movegen = { version = "0.1.0", path = "../movegen" }
serde = { version = "1.0.195", features = ["derive"] }
tokio = { version ="1.35.1", features = ["rt-multi-thread"] }
tower-http = { version = "0.5.0", features = ["fs"] }
